...

    <string name="time_separator" translatable="false">:</string>
    <string name="clear_calendar">Clear</string>

    <!-- settings fragment -->
    <string name="settings_title">Settings</string>
    <string name="settings_ringtone_choice">music volume and ringtone</string>
    <string name="settings_key_sound">key sound</string>
    <string name="settings_app_style">app style selection</string>
    <string name="signal_duration">duration of the alarm sound</string>
    <string name="pause_duration">the duration of the pause when the signal is delayed</string>
    <string name="choose_signal_duration">select the duration of the signal</string>
    <string name="choose_pause_duration">choose pause duration</string>
    <string name="application_style">choose the application style</string>
    <string name="vibration_signal">vibration signal</string>
    <string name="back_button">back button</string>
    <!-- detail fragment -->
    <string name="ok_signalOff">OFF</string>
    <string name="delay_signal">delay for</string>
    <string name="delay">delay signal</string>
    <string name="min">min.</string>
...
    <string name="about_app">about app</string>
    <!-- toast, dialog -->
    <string name="time_is_over">the set time has expired</string>
    <string name="alarm_is_on">alarm is on</string>
    <string name="alarm_is_off">alarm is off</string>
    <string name="delete_all_items">delete all alarms?</string>
    <string name="delete_ok">OK</string>
    <string name="delete_cancel">Cancel</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="restart_activity">the style will be changed after the restart</string>
    <string name="restart_app">restart the app?</string>
    <string name="am_pm">AM/PM</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>

    <!-- toast, dialog -->
...
