<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.comanch.valley_wind_awake.frontListFragment.ListFragment"
        android:label="ListFragment">
        <action
...
            android:id="@+id/action_listFragment_to_keyboardFragment"
            app:destination="@id/keyboardFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_listFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_listFragment_to_aboutAppFragment"
            app:destination="@id/aboutAppFragment"
            app:popUpTo="@id/nav_graph"
...
            app:destination="@id/listFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_keyboardFragment_to_ringtonePickerFragment"
            app:destination="@id/ringtonePickerFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <argument
            android:name="itemId"
            app:argType="long" />
        <argument
...
